# astra-aws-ai-assistant

./: CONCEPTS.md  DEPLOYMENT.md  README.md  pyproject.toml
_scripts/: llamaindex_aws_astradb.ipynb  loadAstra.py  unstructuredpdfLoad.py
backend/: chain.py  constants.py  crawlload.py  ingest.py
frontend/: .env.example
frontend/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx
